@@ -64,6 +64,7 @@ Version 1.5.6+svn:
    * Fixed random memory corruption/assertion failure/massive leak due
      to story  screens.
    * Fixed [role] not working when no type was specified (bug #12660).
+   * Fixed compilation with Python 2.6 (bug #12638 (included a patch)).
 
 Version 1.5.6:
  * Authoring tools:
